# Research-Alpha

./: .env.example  .gitignore  ABOUT.md  README.md  pyproject.toml  ra  ra.py
configs/: award_signals.yaml  venues.yaml
docs/: IMPLEMENTATION_PLAN.md
research_alpha/: __init__.py  __main__.py  app.py  cli.py  config.py  connectors.py  critique.py  db.py  full_text.py  genome.py  gui.py  ideas.py  json_utils.py  layout.py  limitations.py  llm.py  memory.py  patterns.py  prior_art.py  ranking.py  trends.py
scripts/: verify_live.sh  verify_local.sh
seeds/: demo_papers.jsonl  gold_papers.jsonl
tests/: __init__.py  test_app.py  test_full_text.py  test_llm.py
